[package]
name = "day_02"
version = "0.1.0"
authors = ["Den4200 <dennis@dennispham.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "solution"
path = "solution.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
